tests/negative/call_undeclared.fc
// test: call-undeclared-func-test
// compile-fail: true

int write(int _);
void exit(int _);

void main(){
    foo(4);
    exit(0);
}